navidrome/StatefulSet-navidrome.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: navidrome
  name: navidrome
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      name: navidrome
  template:
    metadata:
      labels:
        name: navidrome
    spec:
      containers:
      - env:
        - name: ND_BASEURL
          valueFrom:
            configMapKeyRef:
              key: ND_BASEURL
              name: navidrome-config-env
        - name: ND_LASTFM_APIKEY
          valueFrom:
            secretKeyRef:
              key: ND_LASTFM_APIKEY
              name: navidrome-sealed-secret
        - name: ND_LASTFM_SECRET
          valueFrom:
            secretKeyRef:
              key: ND_LASTFM_SECRET
              name: navidrome-sealed-secret
        - name: ND_SPOTIFY_ID
          valueFrom:
            secretKeyRef:
              key: ND_SPOTIFY_ID
              name: navidrome-sealed-secret
        - name: ND_SPOTIFY_SECRET
          valueFrom:
            secretKeyRef:
              key: ND_SPOTIFY_SECRET
              name: navidrome-sealed-secret
        image: docker.io/deluan/navidrome:0.60.3
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /ping
            port: 4533
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 30
          timeoutSeconds: 5
        name: navidrome
        ports:
        - containerPort: 4533
          name: server
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /ping
            port: 4533
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /library
          name: library
          readOnly: true
        - mountPath: /data
          name: data
      volumes:
      - hostPath:
          path: /cold-data/media/music/library
        name: library
      - hostPath:
          path: /data/navidrome/data
        name: data
  updateStrategy:
    type: RollingUpdate
