navidrome/IngressRoute-navidrome-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app: navidrome
  name: navidrome-ingressroute
  namespace: media
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`music.danielramos.me`)
    middlewares: null
    services:
    - name: navidrome
      port: 4533
  tls: {}
